# django-structure

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  compose-development.yml  compose.yml  docker-compose-development.yml  docker-compose.yml  entrypoint.py  environment.py  manage.py  nginx.conf  pyproject.toml  readthedocs.yml  test_commit_msg.txt
.github/workflows/: ci.yml  commit-lint.yml
apps/api/: apps.py  codes.py  pagination.py  response.py  serializers.py  urls.py
apps/authentication/: admin.py  apps.py  authenticate.py  codes.py  config.py  constants.py  models.py  param.py  serializers.py  services.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/common/: raising.py  validations.py
apps/example/: codes.py  config.py  constants.py  models.py  urls.py
apps/example/migrations/: 0001_initial.py
apps/example/serializers/: post.py
apps/example/services/: post.py
apps/example/views/: post.py
config/: asgi.py  celery_conf.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
constants/: example.py
docs/: commit-conventions.md  pre-commit.md  pylint.md  rich_error.md
pkg/client/: __init__.py  client.py  tests.py
pkg/email/: base.py  email.py
pkg/email/django_mail/: email.py
pkg/logger/: base.py  logger.py
pkg/logger/standard/: logger.py
pkg/rich_error/: constant.py  error.py
pkg/rich_error/tests/: tests.py
requirements/: base.txt  development.txt  production.txt  test.txt
