[project]
name = "django-structure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-redis==5.4.0",
    "django==5.1.4",
    "djangorestframework-simplejwt==5.3.1",
    "python-dotenv==1.0.1",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.28.0",
    "pylint==3.3.2",
    "pre-commit==4.0.1",
    "gitlint==0.19.1",
    "django-cors-headers==4.6.0",
    "gunicorn==23.0.0",
    "gevent==24.11.1",
    "model-bakery==1.20.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
]
